--- a/Samples/GetStarted/package.json
+++ b/Samples/GetStarted/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playwright-testing-service-demo",
+  "name": "getstarted",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {},
