--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -1,5 +1,5 @@
 # TODO: Place this file in the .github/workflows folder of your repository
-# This sample assumes the working directory is ./splaywright-testing-service-demo
+# This sample assumes the working directory is ./samples/get-started
 name: Get Started sample
 on:
   push:
@@ -22,26 +22,26 @@ jobs:
       with:
         node-version: 20   
     - name: Install dependencies
-      working-directory: playwright-testing-service-demo/
+      working-directory: samples/get-started
       run: npm install
     - name: Install Playwright Browsers
-      working-directory: playwright-testing-service-demo/
+      working-directory: samples/get-started
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      working-directory: playwright-testing-service-demo/
-      # env:
-      #   PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN_REPORTING}}
-      #   PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL_REPORTING }}
-      #   PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
-      #   debug: MPTReporter
+      working-directory: samples/get-started
+      env:
+        PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN_REPORTING}}
+        PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL_REPORTING }}
+        PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
+        debug: MPTReporter
       # run: npx playwright test --config=playwright.service.config.ts --workers=30
-      run: npx playwright test --workers=30 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
-    # - uses: actions/upload-artifact@v3
-    #   if: always()
-    #   with:
-    #     name: playwright-report
-    #     path: playwright-testing-service-demo/playwright-report/
-    #     retention-days: 10
+      run: npx playwright test --config=playwright.service.config.ts --workers=30 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
+    - uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: playwright-report
+        path: samples/get-started/playwright-report/
+        retention-days: 10
 
     # - name: Comment on PR
     #   uses: actions/github-script@v5
