--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -22,13 +22,13 @@ jobs:
       with:
         node-version: 20   
     - name: Install dependencies
-      working-directory: samples/get-started
+      working-directory: samples/getstarted
       run: npm install
     - name: Install Playwright Browsers
-      working-directory: samples/get-started
+      working-directory: samples/getstarted
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      working-directory: samples/get-started
+      working-directory: samples/getstarted
       env:
         PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN_REPORTING}}
         PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL_REPORTING }}
@@ -40,7 +40,7 @@ jobs:
       if: always()
       with:
         name: playwright-report
-        path: samples/get-started/playwright-report/
+        path: samples/getstarted/playwright-report/
         retention-days: 10
 
     # - name: Comment on PR
