--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -30,12 +30,12 @@ jobs:
     - name: Run Playwright tests
       working-directory: Samples/GetStarted
       env:
-        PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN_REPORTING}}
-        PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL_REPORTING }}
+        PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_EASTUS2EUAP_ACCESS_TOKEN_REPORTING}}
+        PLAYWRIGHT_SERVICE_URL: ${{ vars.PLAYWRIGHT_SERVICE_EASTUS2EUAP_URL_REPORTING }}
         PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
         debug: MPTReporter
       # run: npx playwright test --config=playwright.service.config.ts --workers=30
-      run: npx playwright test --config=playwright.service.config.ts --workers=30 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
+      run: npx playwright test --config=playwright.service.config.ts --workers=50 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
     - uses: actions/upload-artifact@v3
       if: always()
       with:
