--- a/Samples/GetStarted/package.json
+++ b/Samples/GetStarted/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@azure/microsoft-playwright-testing": "^1.0.0-beta.3",
     "@playwright/test": "^1.47.1",
     "@types/node": "^22.5.5"
   }
