--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -17,8 +17,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shardIndex: [1, 2, 3, 4,5,6,7,8,9,10]
-        shardTotal: [10]
+        shardIndex: [1, 2, 3, 4]
+        shardTotal: [4]
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -48,7 +48,7 @@ jobs:
         PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
         debug: MPTReporter
       # run: npx playwright test --config=playwright.service.config.ts --workers=30
-      run: npx playwright test --config=playwright.service.config.ts --workers=1 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
+      run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=1 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
     - uses: actions/upload-artifact@v3
       if: always()
       with:
