--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -43,8 +43,10 @@ jobs:
     - name: Run Playwright tests
       working-directory: Samples/GetStarted
       env:
-        PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_EASTUS2EUAP_ACCESS_TOKEN_REPORTING}}
-        PLAYWRIGHT_SERVICE_URL: ${{ vars.PLAYWRIGHT_SERVICE_EASTUS2EUAP_URL_REPORTING}}
+        PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_EASTUS_PROD_ACCESS_TOKEN_REPORTING}}
+        PLAYWRIGHT_SERVICE_URL: ${{ vars.PLAYWRIGHT_SERVICE_EASTUS_PROD_URL}}
+        # PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_EASTUS2EUAP_ACCESS_TOKEN_REPORTING}}
+        # PLAYWRIGHT_SERVICE_URL: ${{ vars.PLAYWRIGHT_SERVICE_EASTUS2EUAP_URL_REPORTING}}
         # PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_EASTASIA_NIGHTLY_ACCESS_TOKEN_REPORTING}}
         # PLAYWRIGHT_SERVICE_URL: ${{ vars.PLAYWRIGHT_SERVICE_EASTASIA_NIGHTLY_URL }}
         # PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_EASTUS_NIGHTLY_ACCESS_TOKEN_REPORTING}}
