--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -14,11 +14,11 @@ jobs:
   test:
     timeout-minutes: 120
     runs-on: ubuntu-latest
-    # strategy:
-    #   fail-fast: false
-    #   matrix:
-    #     shardIndex: [1, 2, 3, 4]
-    #     shardTotal: [4]
+    strategy:
+      fail-fast: false
+      matrix:
+        shardIndex: [1, 2, 3, 4]
+        shardTotal: [4]
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -36,9 +36,9 @@ jobs:
       working-directory: Samples/GetStarted
       run: npm install
     
-    - name: Install Playwright Browsers
-      working-directory: Samples/GetStarted
-      run: npx playwright install --with-deps
+    # - name: Install Playwright Browsers
+    #   working-directory: Samples/GetStarted
+    #   run: npx playwright install --with-deps
 
     - name: Run Playwright tests
       working-directory: Samples/GetStarted
@@ -54,8 +54,8 @@ jobs:
         PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
         # debug: MPTReporter
       # run: npx playwright test --config=playwright.service.config.ts --workers=30
-      # run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=50 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
-      run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=20
+      run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=10 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
+      # run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=20
     - uses: actions/upload-artifact@v3
       if: always()
       with:
