--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -52,7 +52,7 @@ jobs:
         PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_EASTUS_NIGHTLY_ACCESS_TOKEN_REPORTING}}
         PLAYWRIGHT_SERVICE_URL: ${{ vars.PLAYWRIGHT_SERVICE_EASTUS_NIGHTLY_URL }}
         PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
-        # debug: MPTReporter
+        debug: MPTReporter
       # run: npx playwright test --config=playwright.service.config.ts --workers=30
       run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=50 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
       # run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=20
