--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -54,8 +54,8 @@ jobs:
         PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
         debug: MPTReporter
       # run: npx playwright test --config=playwright.service.config.ts --workers=30
-      run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=50 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
-      # run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=20
+      # run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=50 --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} 
+      run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=20
     - uses: actions/upload-artifact@v3
       if: always()
       with:
