--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -4,8 +4,8 @@ name: Get Started sample
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+#   pull_request:
+#     branches: [ main, master ]
   workflow_dispatch:
     inputs:
       environment:
@@ -51,6 +51,9 @@ jobs:
 
     - name: Set Environment Variables Based on Input
       run: |
+       echo "Selected environment: ${{ github.event.inputs.environment }}"
+       echo "Selected region: ${{ github.event.inputs.region }}"
+
          if [[ "${{ github.event.inputs.environment }}" == "production" ]]; then
             echo "PLAYWRIGHT_SERVICE_ACCESS_TOKEN=${{ secrets.PLAYWRIGHT_SERVICE_EASTUS_PROD_ACCESS_TOKEN_REPORTING }}" >> $GITHUB_ENV
             echo "PLAYWRIGHT_SERVICE_URL=${{ vars.PLAYWRIGHT_SERVICE_EASTUS_PROD_URL }}" >> $GITHUB_ENV
@@ -85,7 +88,7 @@ jobs:
         PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
         debug: MPTReporter
       run: npx playwright test --config=playwright.service.config.ts example.spec.ts --workers=1 --retries=1
-      
+
     - uses: actions/upload-artifact@v4
       if: always()
       with:
