--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -107,6 +107,7 @@ jobs:
           PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{ env.PLAYWRIGHT_SERVICE_ACCESS_TOKEN }}
           PLAYWRIGHT_SERVICE_URL: ${{ env.PLAYWRIGHT_SERVICE_URL }}
           PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
+          TEST_ITERATIONS: ${{ github.event.inputs.TEST_ITERATIONS }}
           debug: MPTReporter
         run: |
           WORKERS=${{ github.event.inputs.workers }}
