--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -41,7 +41,7 @@ permissions:
   id-token: write
   contents: read
 jobs:
-  test:
+  GITHUB_TESTS:
     timeout-minutes: 120
     environment: ${{ github.event.inputs.environment }}
     runs-on: ubuntu-latest
