--- a/Samples/GetStarted/package.json
+++ b/Samples/GetStarted/package.json
@@ -8,8 +8,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@azure/microsoft-playwright-testing": "~1.0.0-beta.7",
-    "@playwright/test": "~1.49",
+    "@azure/microsoft-playwright-testing": "^1.0.0-beta.7",
+    "@playwright/test": "^1.50",
     "@types/node": "^22.5.5"
   }
 }
