--- a/.github/workflows/GitHubTests.yml
+++ b/.github/workflows/GitHubTests.yml
@@ -60,9 +60,9 @@ jobs:
         working-directory: Samples/GetStarted
         run: npm install
 
-      - name: Install Playwright Browsers
-        working-directory: Samples/GetStarted
-        run: npx playwright install --with-deps
+      # - name: Install Playwright Browsers
+      #   working-directory: Samples/GetStarted
+      #   run: npx playwright install --with-deps
 
       - name: Set Environment Variables Based on Input
         run: |
